--- a/style.css
+++ b/style.css
@@ -20,3 +20,12 @@ h1 {
     top: 150px;
 
 }
+
+.social {
+    position: relative;
+    right:-100px; 
+    padding: 10px;
+    margin-right: 30px;
+
+    
+}
