--- a/style.css
+++ b/style.css
@@ -114,3 +114,28 @@ label {
     position: absolute;
     bottom: 10px;
 }
+
+.movie-row{
+    margin-top:20px;
+    margin-bottom:50px;
+}
+.movie-cover{
+    width:99%;
+    transition:0.3s;
+    opacity: 0.7;
+}
+.movie-cover:hover{
+    opacity: 1;
+    transition:0.3s;
+    cursor:pointer;
+   transform:scale(1.05);
+}
+
+
+.carousel-control-next{
+    margin-right:-5%;
+}
+
+.carousel-control-prev{
+    margin-left:-5%;
+}
