--- a/style.css
+++ b/style.css
@@ -112,24 +112,27 @@ label {
 
 .footer {
     position: absolute;
-    bottom: 20px;
+    bottom: 0;
     left: 20%;
 }
+
 .flinks {
-    position: absolute;
-    bottom: 0px;
+    
+    top: 10px;
     left: 20%;
+    margin-right: 430px;
 }
 
 .movie-row{
     margin-top:20px;
     margin-bottom:50px;
 }
+
 .movie-cover{
     width:200px;
     transition:0.3s;
     opacity: 0.7;
-    height: 200px;
+    
 }
 
 .movie-cover:hover{
@@ -139,12 +142,21 @@ label {
    transform:scale(1.05);
 }
 
-
 .carousel-control-next{
     margin-right:-5%;
 }
 
 .carousel-control-prev{
     margin-left:-5%;
+}
 
-    
+.carousel-item {
+    position: relative;
+    /* display: none; */
+    float: left;
+    width: 100%;
+    margin-right: -100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    transition: transform .6s ease-in-out;
+}
