--- a/style.css
+++ b/style.css
@@ -41,8 +41,8 @@ nav {
 
 .dropdown {
     position: absolute;
-    left: 215px;
-    top: 85px;
+    left: 225px;
+    top: 6px;
 }
 
 button {
@@ -63,7 +63,20 @@ button {
 }
 
 .title {
-    color: white;
+    color: rgb(236, 236, 236);
+}
+
+h4{
+    position: relative;
+    left: 80px ;
+}
+
+.genres-drop-down {
+    position: relative;
+    top: 20px;
+    left: -370px;
+    display: flex;
+
 }
 
 .subtitle {
@@ -113,11 +126,12 @@ label {
 .footer {
     position: absolute;
     bottom: 0;
-    left: 20%;
+    left: 30%;
+      display: none;
 }
 
 .flinks {
-    
+    display: none;
     top: 10px;
     left: 20%;
     margin-right: 430px;
@@ -126,12 +140,17 @@ label {
 .movie-row{
     margin-top:20px;
     margin-bottom:50px;
+    margin-left: 70px;
+    width: 3800px;
+    
 }
 
 .movie-cover{
-    width:200px;
+    width:280px;
+    max-height: 200px;
     transition:0.3s;
     opacity: 0.7;
+    
     
 }
 
@@ -142,21 +161,24 @@ label {
    transform:scale(1.05);
 }
 
+
+
 .carousel-control-next{
     margin-right:-5%;
 }
 
 .carousel-control-prev{
-    margin-left:-5%;
+    margin-left:-7%;
 }
 
 .carousel-item {
     position: relative;
-    /* display: none; */
+     display: block; 
     float: left;
-    width: 100%;
+    width: 70%;
     margin-right: -100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     transition: transform .6s ease-in-out;
 }
+
