--- a/style.css
+++ b/style.css
@@ -5,6 +5,16 @@
 
 body {
     background-color: black;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+
+}
+
+footer{
+    position: absolute;
+    margin-top: auto;
+    bottom: 0;
 }
 
 h1 {
@@ -73,9 +83,9 @@ h4{
 }
 
 .genres-drop-down {
-    position: relative;
-    top: 10px;
-    left: -370px;
+    position: absolute;
+    top: 100px;
+    left: 10px;
     display: flex;
 
 }
@@ -128,11 +138,12 @@ label {
     position: absolute;
     bottom: 0;
     left: 30%;
-      display: none;
+    margin-top: 350px;
 }
 
 .flinks {
-    display: none;
+    
+    margin-bottom: 50px;
     top: 10px;
     left: 20%;
     margin-right: 430px;
@@ -141,11 +152,14 @@ label {
 .movie-row{
     margin-top:20px;
     margin-bottom:50px;
-    margin-left: 55px;
-    width: 3800px;
+    margin-left: 25px;
+    width: 100%;
     
 }
 
+.movie-cards {
+    margin-right: 120px;
+}
 .movie-cover{
     width:280px;
     max-height: 200px;
@@ -163,7 +177,7 @@ label {
 
 
 .carousel-control-next{
-    margin-right:-5%;
+    margin-right:-4%;
 }
 
 .carousel-control-prev{
@@ -174,8 +188,8 @@ label {
     position: relative;
      display: block; 
     float: left;
-    width: 70%;
-    margin-right: -100%;
+    width: 110%;
+    margin-right: 20px;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     transition: transform .6s ease-in-out;
