--- a/style.css
+++ b/style.css
@@ -203,10 +203,10 @@ label {
 
 .entry-div {
     position: relative;
-    top: 100px;]
-    left: 260px;
+    top: 100px;
     margin-left: 25px !important;
 }
+
 
 .btn-danger {
     margin-top: 5px;
