--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+#id {
+    visibility: hidden;
+}
+
 .logo {
     height: 20px;
     width: 20px;
@@ -129,6 +133,15 @@ form {
     top: 20px;
 }
 
+.btn-warning {
+    visibility:hidden;
+    z-index: 4;
+    position: relative;
+    bottom: 40px;
+    left: 205px;
+}
+
+
 .form-group {
     position: relative;
     margin-top: 10px;
@@ -235,11 +248,12 @@ label {
     color: red;
 }
 
-.movie-cards a{
-    visibility: hidden;
+.movie-cards:hover svg{
+    visibility: visible;
+    z-index: 2;
 }
 
-.movie-cards:hover svg{
+.movie-cards:hover a{
     visibility: visible;
     z-index: 2;
 }
